# graduation-project

./: .env.template  .gitignore  README.md  ToDoList  progress.md  pyproject.toml  pytest.ini  require.md  run-scripts-demo-start.txt  run-scripts-full-setup.txt  tasks-gpt.md  tasks.md  数据库 + 算法模块协同工作说明.md  进度.md
algo-engine/: CMakeLists.txt  README.md
algo-engine/bindings/python/: module.cpp
algo-engine/include/algo_engine/cdq/: historical_dominance_cdq.hpp  historical_dominance_cdq_3d.hpp
algo-engine/include/algo_engine/segment_tree/: range_kth_persistent_segment_tree.hpp  range_max_segment_tree.hpp
algo-engine/src/cdq/: historical_dominance_cdq.cpp  historical_dominance_cdq_3d.cpp
algo-engine/src/segment_tree/: range_kth_persistent_segment_tree.cpp  range_max_segment_tree.cpp
algo-engine/tests/integration/: test_python_binding.py
algo-engine/tests/unit/: test_historical_dominance_cdq.cpp  test_historical_dominance_cdq_3d.cpp  test_range_kth_persistent_segment_tree.cpp  test_range_max_segment_tree.cpp
algo-module/: CMakeLists.txt  README.md
algo-module/bindings/python/: module.cpp
algo-module/include/algo_module/cdq/: historical_dominance_cdq.hpp  historical_dominance_cdq_3d.hpp
algo-module/include/algo_module/segment_tree/: range_kth_persistent_segment_tree.hpp  range_max_segment_tree.hpp
algo-module/src/cdq/: historical_dominance_cdq.cpp  historical_dominance_cdq_3d.cpp
algo-module/src/segment_tree/: range_kth_persistent_segment_tree.cpp  range_max_segment_tree.cpp
algo-module/tests/integration/: test_python_binding.py
algo-module/tests/unit/: test_historical_dominance_cdq.cpp  test_historical_dominance_cdq_3d.cpp  test_range_kth_persistent_segment_tree.cpp  test_range_max_segment_tree.cpp
backend/: alembic.ini  requirements-optional.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260407_01_initial_schema.py  20260409_01_unified_trading_system.py  20260409_02_cleanup_legacy_trading_sources.py  20260411_01_relax_trading_amount_nullable.py  20260411_02_remove_asset_class_enforce_dataset_name_uniqueness.py  20260411_03_exclude_failed_runs_from_active_upload_uniqueness.py  20260413_01_rename_trading_instrument_columns_to_stock.py  20260417_01_add_audit_logs.py  20260419_01_add_import_preview_and_mapping_templates.py  20260420_01_add_trading_turnover_column.py  20260422_01_add_trading_optional_analysis_columns.py
backend/app/: __init__.py  main.py
backend/app/algo_bridge/: __init__.py  tdigest.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/data_sources/: __init__.py  contracts.py  demo_crawler.py  ecommerce_synthetic.py  olist.py  stock.py
backend/app/engine_bridge/: __init__.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/repositories/: __init__.py  audit_logs.py  commerce.py  imports.py  stocks.py  trading.py  users.py
backend/app/schemas/: __init__.py  admin_dashboard.py  admin_users.py  algo.py  api.py  auth.py  trading.py
backend/app/services/: __init__.py  admin_dashboard.py  admin_users.py  algo_indexes.py  algo_stocks.py  algo_trading.py  audit_logs.py  auth.py  import_matcher.py  imports.py  risk_radar.py  trading_analysis.py  trading_head.json
backend/scripts/: _bootstrap.py  benchmark_algo_suite.py  benchmark_joint_anomaly_ranking.py  check_environment.py  crawl_demo_ecommerce.py  export_requirements.py  fetch_stock_akshare.py  generate_ecommerce_synthetic.py  generate_er_diagram.py  import_data.py  init_admin.py  inspect_olist_dataset.py  live_smoke.py  visualize_benchmark_results.py
backend/tests/: postgres_integration.py  test_admin_dashboard.py  test_admin_users.py  test_algo_stocks.py  test_algo_trading.py  test_contracts.py  test_database_pipeline.py  test_ecommerce_synthetic.py  test_risk_radar.py  test_tdigest_range_kth.py  test_trading_analysis.py
benchmarks/: __init__.py  run_all.py
benchmarks/common/: __init__.py  backend_runtime.py  bootstrap.py  io.py  metrics.py  plotting.py  synthetic_data.py
benchmarks/kth_comparison/: __init__.py  run.py
benchmarks/kth_comparison/results/: build_metrics.csv  error_summary.csv  latency_summary.csv  raw_errors.csv  raw_query_latencies.csv  summary.json
benchmarks/platform_quality/: __init__.py  locustfile.py  run.py
benchmarks/platform_quality/results/: locust_smoke_stats.csv  locust_smoke_stats_history.csv  locust_thesis_stats.csv  locust_thesis_stats_history.csv  request_summary.csv  (+3 more)
benchmarks/query_efficiency/: __init__.py  run.py
benchmarks/tests/: test_common.py  test_platform_quality.py
claude-analysis/: cpp_engine_analysis.md  proposal_review.md
deploy/: docker-compose.yml
deploy/env/: postgres.env.template
docs/: data-source-strategy.md  environment-baseline.md  main-text.md  main-text.txt  python-environment.md  structure-claude.md  structure-codex.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: trading_import_template.csv
frontend/src/: App.vue  style.css
pre-tasks/: tasks-gemini3.1-high.md  tasks-geminipro-web.md  tasks-gpt-web.md  tasks-gpt5.3-codex.md  tasks-opus4.6.md  tasks-sonnet4.6-perplexity.md
scripts/dev/: common.ps1  demo-start.ps1  full-start.ps1
scripts/python/: check_fields.py  fetch_single_stock_daily.py  fetch_stock_complete_requirements.py  fetch_stock_complete_requirements_batch.py  random_validate_full_fetch.py  test_datasource.py
web/: .env.template  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/.playwright-cli/: page-2026-04-28T06-15-44-941Z.yml  page-2026-04-28T06-17-57-020Z.yml  page-2026-04-28T06-20-31-984Z.yml  page-2026-04-28T06-21-38-722Z.yml  page-2026-04-28T06-22-05-776Z.yml  page-2026-04-28T06-22-21-766Z.yml  page-2026-04-28T06-22-42-124Z.yml  page-2026-04-28T06-25-23-480Z.yml  page-2026-04-28T06-26-05-323Z.yml  page-2026-04-28T06-30-00-611Z.yml  page-2026-04-28T06-33-16-459Z.yml
web/public/: trading_import_template.csv
web/src/: App.vue  env.d.ts  main.ts  style.css
(+90 files in other folders)
