[project]
name = "graduation-project"
version = "0.1.0"
description = "Unified trading data management system for user-uploaded CSV/XLSX datasets."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.8,<3.0",
    "pandas>=2.2,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "openpyxl>=3.1,<4.0",
    "pybind11>=3.0,<4.0",
    "python-dotenv>=1.0,<2.0",
    "alembic>=1.16,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "uvicorn>=0.34,<1.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
benchmark = [
    "matplotlib>=3.9,<4.0",
    "psutil>=6.0,<7.0",
]

[tool.uv]
package = false
